# siri-ai

./: .env.example  .gitignore  README.md  package-lock.json  package.json  start-app.sh
backend/: README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py  seed_data.py
backend/app/routes/: auth.py  projects.py  search.py  transcriptions.py  users.py
backend/app/services/: __init__.py  auth.py  data_store.py  literature_search.py  openai_client.py  search_term_generation.py  transcriptions.py
backend/tests/: test_api.py  test_config.py  test_literature_search.py  test_search_term_generation.py
frontend/: eslint.config.js  index.html  package.json  tsconfig.json
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AppHeader.tsx  ArticleTable.tsx  EmptyState.tsx  ErrorBoundary.tsx  LoginPage.tsx  Metric.tsx  Modal.tsx  NewProjectModal.tsx  ProfileMenu.tsx
frontend/src/components/home/: HomePage.tsx  ProjectRow.tsx
frontend/src/components/transcription/: AudioProcessingPanel.tsx  RecordingList.tsx  RecordingOverview.tsx  TranscriptionPage.tsx  TranscriptionResultPanel.tsx  (+3 more)
frontend/src/context/: WorkspaceContext.tsx
frontend/src/data/: constants.ts
frontend/src/hooks/: useDismiss.ts
frontend/src/lib/: articles.test.ts  articles.ts  normalize.test.ts  normalize.ts  pipeline.test.ts  pipeline.ts  utils.ts
frontend/src/services/: transcriptionApi.ts  workspaceApi.test.ts  workspaceApi.ts
storage/projects/: records.json
storage/transcriptions/: records.json
storage/users/: current.json
(+10 files in other folders)
